...
internal const val TAG_CITY_MARINE_AVAILABLE = "city_marine_available_"
internal const val TAG_CITY_MARINE_ENABLED = "city_marine_enabled_"
internal const val TAG_CITY_GRAPHIC_VIEW_MENU = "city_graphic_view_menu_"
internal const val TAG_CITY_RADAR_MENU = "city_radar_menu_"
internal const val TAG_CITY_MARINE_MENU_ICON = "city_marine_menu_icon_"
internal const val TAG_CITY_REMOVE_MENU_ICON = "city_remove_menu_icon_"
internal const val TAG_EMPTY_STATE = "empty_state"
internal const val TAG_ADD_FAB = "add_fab"
internal const val TAG_DONATE_BUTTON = "donate_button"
internal const val TAG_HELP_BUTTON = "help_button"
internal const val TAG_SETTINGS_BUTTON = "settings_button"

