...
    <string name="error_model_out_of_range">Données indisponibles pour ce modèle</string>
    <string name="error_location_not_supported_by_model">Pas prise en charge par le modèle</string>
    <string name="error_location_not_supported_by_models">Pas prise en charge par les modèles sélectionnés</string>
    <string name="error_no_model_available">Aucune donnée modèle disponible pour cette ville</string>
    <string name="city_not_found_in_favorites">Ville non trouvée dans les favoris</string>

    <string name="empty_favorites_title">Aucune ville</string>
    <string name="empty_favorites_subtitle">Touchez + pour en ajouter une et comparer les prévisions de plusieurs modèles.</string>
    <string name="action_retry">Réessayer</string>
    <string name="action_remove_from_favorites">Retirer des favoris</string>
    <string name="action_more_options">Options</string>
    <string name="precip_dry">Sec</string>
    <string name="precip_divided">%1$d/%2$d modèles ⚠</string>
...
